Creating fastapi app.

--- a/deploy_ais_prize_challenge_classifier.ipynb
+++ b/deploy_ais_prize_challenge_classifier.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyP84cksUPOZBn1dA16dVkwT",
+      "authorship_tag": "ABX9TyN+OxmyFsheMy1dslvG1xLb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2287,7 +2287,7 @@
         "from typing import List\n",
         "\n",
         "\n",
-        "class openaiModel(BaseModel):\n",
+        "class detoxifyModel(BaseModel):\n",
         "    data: List[conlist(str, min_items=1, max_items=10)]"
       ],
       "metadata": {
@@ -2301,7 +2301,32 @@
       "source": [
         "import logging\n",
         "\n",
-        "app = FastAPI(title=\"AI Safety Prize Challenge\")"
+        "app = FastAPI(title=\"AI Safety Prize Challenge\")\n",
+        "\n",
+        "# Initialize logging\n",
+        "my_logger = logging.getLogger()\n",
+        "my_logger.setLevel(logging.DEBUG)\n",
+        "logging.basicConfig(level=logging.DEBUG, filename='logs.log')\n",
+        "\n",
+        "model = None\n",
+        "\n",
+        "@app.on_event(\"startup\")\n",
+        "def load_model():\n",
+        "    global model\n",
+        "    model = Detoxify('original', device='cuda')\n",
+        "\n",
+        "@app.post(\"/api\", tags=[\"prediction\"])\n",
+        "async def get_predictions(input_list: detoxifyModel):\n",
+        "    try:\n",
+        "        results = []\n",
+        "        print(input_list)\n",
+        "        print(type(input_list))\n",
+        "        for text in input_list:\n",
+        "            results.append(model.predict(text))\n",
+        "        return results\n",
+        "    except:\n",
+        "        my_logger.error(\"Something went wrong!\")\n",
+        "        return ['error']"
       ],
       "metadata": {
         "id": "Qqhy1RLkYyO7"
